# mailcommon

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  KF5MailCommonConfig.cmake.in  KPimMailCommonConfig.cmake.in  REUSE.toml  mailcommon.categories  mailcommon.kdev4  mailcommon.renamecategories  metainfo.yaml
autotests/: CMakeLists.txt  dummykernel.cpp  dummykernel.h  favoritestest.cpp  foldertreewidgettest.cpp
autotests/unittestenv/: config-mysql-fs.xml  config-postgresql-fs.xml  config-sqlite-db.xml  config.xml
autotests/unittestenv/xdgconfig/: akonadi_knut_resource_1rc  akonadi_knut_resource_2rc
autotests/unittestenv/xdglocal/: testdata-res1.xml  testdata-res2.xml  testdata-res3.xml
src/: CMakeLists.txt  Messages.sh  config-mailcommon.h.in  dbusoperators.h  mailcommon-index.qdoc  mailcommon.qdoc  mailcommon.qdocconf  mailcommon_private_export.h  settings.kcfg
src/collectionpage/: attributeregistrar.cpp  collectionexpiryjob.cpp  collectionexpiryjob.h  collectionexpirypage.cpp  collectionexpirypage.h  collectionexpirywidget.cpp  collectionexpirywidget.h  collectiongeneralpage.cpp  collectiongeneralpage.h  collectiongeneralwidget.cpp  collectiongeneralwidget.h  collectiontemplateswidget.cpp  collectiontemplateswidget.h  collectiontypeutil.cpp  collectiontypeutil.h  collectionviewwidget.cpp  collectionviewwidget.h  contenttypewidget.cpp  contenttypewidget.h  incidencesforwidget.cpp  incidencesforwidget.h
src/collectionpage/attributes/: expirecollectionattribute.cpp  expirecollectionattribute.h
src/collectionpage/autotests/: CMakeLists.txt  collectionannotationsattributetest.cpp  collectionannotationsattributetest.h  contenttypewidgettest.cpp  contenttypewidgettest.h  expirecollectionattributetest.cpp  expirecollectionattributetest.h  incidencesforwidgettest.cpp  incidencesforwidgettest.h
src/designer/: CMakeLists.txt
src/filter/: filterimporterexporter.cpp  filterimporterexporter.h  filterimporterpathcache.cpp  filterimporterpathcache.h  filterlog.cpp  filterlog.h  filtermanager.cpp  filtermanager.h  filterselectiondialog.cpp  filterselectiondialog.h  itemcontext.cpp  itemcontext.h  kmfilteraccountlist.cpp  kmfilteraccountlist.h  kmfilterdialog.cpp  kmfilterdialog.h  kmfilterlistbox.cpp  kmfilterlistbox.h  mailfilter.cpp  mailfilter.h  mdnadvicedialog.cpp  mdnadvicedialog.h  soundtestwidget.cpp  soundtestwidget.h
src/filter/autotests/: CMakeLists.txt  filteractionaddheadertest.cpp  filteractionaddheadertest.h  filteractionaddtoaddressbooktest.cpp  filteractionaddtoaddressbooktest.h  filteractioncopytest.cpp  filteractioncopytest.h  filteractiondecrypttest.cpp  filteractiondecrypttest.h  filteractiondeletetest.cpp  filteractiondeletetest.h  filteractionencrypttest.cpp  filteractionencrypttest.h  filteractionexectest.cpp  filteractionexectest.h  filteractionforwardtest.cpp  filteractionforwardtest.h  filteractionmissingaccountdialogtest.cpp  filteractionmissingaccountdialogtest.h  filteractionmissingidentitydialogtest.cpp  filteractionmissingidentitydialogtest.h  filteractionmissingsoundurldialogtest.cpp  filteractionmissingsoundurldialogtest.h  filteractionmissingtagdialogtest.cpp  filteractionmissingtagdialogtest.h  filteractionmissingtemplatedialogtest.cpp  filteractionmissingtemplatedialogtest.h  filteractionmissingtransportdialogtest.cpp  filteractionmissingtransportdialogtest.h  filteractionmovetest.cpp  filteractionmovetest.h  filteractionpipethroughtest.cpp  filteractionpipethroughtest.h  filteractionplaysoundtest.cpp  (+45 more)
src/folder/: accountconfigorderdialog.cpp  accountconfigorderdialog.h  entitycollectionorderproxymodel.cpp  entitycollectionorderproxymodel.h  favoritecollectionorderproxymodel.cpp  favoritecollectionorderproxymodel.h  foldercollection.cpp  foldercollection.h  foldercollectionmonitor.cpp  foldercollectionmonitor.h  folderrequester.cpp  folderrequester.h  folderselectiondialog.cpp  folderselectiondialog.h  foldersettings.cpp  foldersettings.h  foldertreeview.cpp  foldertreeview.h  foldertreewidget.cpp  foldertreewidget.h  foldertreewidgetproxymodel.cpp  foldertreewidgetproxymodel.h  hierarchicalfoldermatcher.cpp  hierarchicalfoldermatcher_p.h
src/interfaces/: mailinterfaces.h  rulewidgethandler.h
src/job/: backupjob.cpp  backupjob.h  expiredeletejob.cpp  expiredeletejob.h  expirejob.cpp  expirejob.h  expiremovejob.cpp  expiremovejob.h  folderjob.cpp  folderjob.h  jobscheduler.cpp  jobscheduler.h
src/kernel/: mailkernel.cpp  mailkernel.h
src/mdn/: mdnadvicehelper.cpp  mdnadvicehelper.h  mdnstateattribute.cpp  mdnstateattribute.h  mdnwarningjob.cpp  mdnwarningjob.h  mdnwarningwidgetjob.cpp  mdnwarningwidgetjob.h  sendmdnhandler.cpp  sendmdnhandler.h
src/plugincheckbeforeclosing/: plugincheckbeforeclosing.cpp  plugincheckbeforeclosing.h  plugincheckbeforeclosinginterface.cpp  plugincheckbeforeclosinginterface.h
src/search/: searchpattern.cpp  searchpattern.h  searchpatternedit.cpp  searchpatternedit.h
src/settings/: mailcommonsettings_base.kcfgc
src/snippets/: snippetattachmentwidget.cpp  snippetattachmentwidget.h  snippetcustomfileattachmentnamedialog.cpp  snippetcustomfileattachmentnamedialog.h  snippetcustomfileattachmentnamewidget.cpp  snippetcustomfileattachmentnamewidget.h  snippetdialog.cpp  snippetdialog.h  snippetselectattachmentdialog.cpp  snippetselectattachmentdialog.h  snippetselectattachmentwidget.cpp  snippetselectattachmentwidget.h  snippetsmanager.cpp  snippetsmanager.h  snippetsmodel.cpp  snippetsmodel.h  snippettreeview.cpp  snippettreeview.h  snippetvariabledialog.cpp  snippetvariabledialog.h  snippetwidget.cpp  snippetwidget.h
src/tag/: addtagdialog.cpp  addtagdialog.h  tag.cpp  tag.h  tagwidget.cpp  tagwidget.h
src/util/: cryptoutils.cpp  cryptoutils.h  mailutil.cpp  mailutil.h  mailutil_p.h  resourcereadconfigfile.cpp  resourcereadconfigfile.h
src/widgets/: favoritecollectionwidget.cpp  favoritecollectionwidget.h  purposemenuwidget.cpp  purposemenuwidget.h  redirectdialog.cpp  redirectdialog.h  redirectwidget.cpp  redirectwidget.h
(+369 files in other folders)
